# DiTing

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: aggregator.py  emailer.py  feeds.py  filters.py  summaries.py  user.py
src/web/: app.py
tst/: test_aggregator.py
