[tool.poetry]
name = "diting"
version = "0.1.0"
description = "A customizable news aggregator."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
beautifulsoup4 = "^4.10"
requests = "^2.26"
feedparser = "^6.0"
nltk = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"