[metadata]
name = diting
version = 0.1.0
description = A customizable news aggregator.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/diting
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    requests
    beautifulsoup4
    feedparser
    flask  # or fastapi, depending on your choice
    # Add other dependencies as needed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    diting = diting.cli:main  # Adjust if you have a CLI entry point

[options.extras_require]
dev =
    pytest
    flake8
    black
    # Add other development dependencies as needed